--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,6 +29,15 @@ services:
     ports:
       - "5000:5000"
 
+  node-app:
+    build:
+      context: ./Backend/Docker/Node
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    networks:
+      - app-network
+
   nginx:
     image: nginx:latest
     ports:
@@ -37,7 +46,7 @@ services:
       - ./Frontend:/usr/share/nginx/html
       - ./Backend/Docker/Site/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - api
+      - node-app
     networks:
       - app-network
 
